[package]
name = "mriscv"
version = "0.0.0"
authors = ["Determinant <tederminant@gmail.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"

[dependencies]
panic-halt = "0.2.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"
runes = "0.2.5"

[profile.release]
codegen-units = 1 # better optimizations
debug = false
lto = true
